--- a/Amt-12 amzon/index.html
+++ b/Amt-12 amzon/index.html
@@ -20,7 +20,7 @@
             <div class="flex logo">
             <a href=""><img src="./images/Amazon--Logo.png" alt=""></a>
             <div class="map flex">
-                <i class="fas fa-map-marker"></i>
+                <i class="fa-solid fa-location-crosshairs"></i>
                 <div>
                     <span>Deliver to</span>
                     <span>India</span>
@@ -36,7 +36,7 @@
             <div class="flex right">
                 <div class="flex lang">
                     <img src="india" alt="">
-                    <i class="fas fa-caret-down"></i>
+                    <i class="fa fa-caret-down"></i>
                 </div>
                 <div class="sign">
                     <span>Hello , sign in</span>
